[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/UI/Gameplay/PlayerFrame.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Gameplay/FlyBar.png" type="Texture" id=2]
[ext_resource path="res://Objects/Wizards/Meg/MegHead.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Gameplay/HealthBar.png" type="Texture" id=4]
[ext_resource path="res://Objects/Wizards/Zak/ZakHead.png" type="Texture" id=5]
[ext_resource path="res://Objects/UI/Gameplay/UISpell.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/UI/Spells/Hammerfall.png" type="Texture" id=7]
[ext_resource path="res://Objects/UI/Gameplay/PlayerInfo.gd" type="Script" id=8]
[ext_resource path="res://Objects/Spells/Melee/Hammerfall/RollingPin.png" type="Texture" id=9]
[ext_resource path="res://Objects/Spells/Range/IceStake/Ice Stake.png" type="Texture" id=10]

[node name="PlayerInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1643.0
margin_bottom = -958.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
hp = 75
mana = 75
character_portrait_texture = ExtResource( 3 )
spells_texture = [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ) ]

[node name="ProgressBars" type="Control" parent="."]
margin_top = 6.0
margin_right = 279.0
margin_bottom = 119.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlyBar" type="TextureProgress" parent="ProgressBars"]
margin_left = 67.0
margin_top = 75.0
margin_right = 367.0
margin_bottom = 105.0
rect_scale = Vector2( 0.5, 0.5 )
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0, 0.882353, 1, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpBar" type="TextureProgress" parent="ProgressBars"]
margin_left = 77.0
margin_top = 44.0
margin_right = 233.0
margin_bottom = 76.0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PotraitHolder" type="Control" parent="."]
margin_top = 6.0
margin_right = 106.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="PotraitHolder"]
self_modulate = Color( 0.211765, 0.352941, 1, 1 )
margin_left = 16.0
margin_top = 18.0
margin_right = 91.0
margin_bottom = 93.0
rect_rotation = 15.3278
rect_pivot_offset = Vector2( 37.5, 37.5 )
rect_clip_content = true
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mask" type="Control" parent="PotraitHolder/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0433
margin_top = -25.9889
margin_right = 28.9567
margin_bottom = 31.011
rect_rotation = -15.3
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="PotraitHolder/Background/Mask"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.501
margin_top = -31.0034
margin_right = 42.499
margin_bottom = 38.9966
rect_rotation = -1.20716
rect_pivot_offset = Vector2( 37.5, 37.5 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellsHolder" type="Control" parent="."]
margin_left = 89.0
margin_top = 7.0
margin_right = 241.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellsContainer" type="HBoxContainer" parent="SpellsHolder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 137.0
margin_bottom = 47.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spell1" parent="SpellsHolder/SpellsContainer" instance=ExtResource( 6 )]
margin_right = 41.0
margin_bottom = 42.0

[node name="Spell2" parent="SpellsHolder/SpellsContainer" instance=ExtResource( 6 )]
margin_left = 45.0
margin_right = 86.0
margin_bottom = 42.0
spell_duration = 2.0

[node name="Spell3" parent="SpellsHolder/SpellsContainer" instance=ExtResource( 6 )]
margin_left = 90.0
margin_right = 132.0
margin_bottom = 42.0
spell_duration = 0.5
